--- a/odin-recipe/chicken-karahi.html
+++ b/odin-recipe/chicken-karahi.html
@@ -10,7 +10,7 @@
     <h1>Chicken Karahi</h1>
     <img src="./images/karahi.jpg" alt="Juicy-Karahi">
     <h2>Description</h2>
-    <p>Chicken karahi is a spicy Pakistani and North Indian dish that is made with bone-in chicken pieces cooked in a wok-style pan with tomatoes, ginger, garlic, and a blend of aromatic spices. The dish gets its name from the karahi, a traditional cooking vessel used to prepare the dish. The dish is often garnished with fresh coriander leaves and served with naan or rice.</p>
+    <p>Chicken karahi is a spicy Pakistani and North Indian dish that is made with bone-in chicken pieces cooked in a wok-style pan with tomatoes, ginger, garlic, and a blend of aromatic spices. The dish gets its name from the karahi, a traditional cooking vessel used to prepare the dish. The dish is often garnished with fresh coriander leaves and served with naan or rice.My favourite</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 kg bone-in chicken, cut into pieces</li>
